--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,11 @@
     "expo-linear-gradient": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "libphonenumber-js": "^1.10.14",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
