--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -12,7 +12,11 @@ install! 'cocoapods',
 target 'app' do
   use_expo_modules!
   config = use_native_modules!
+  
+  use_modular_headers!
 
+  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec', :modular_headers => false
+  
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
 
   # Flags change depending on the env values.
